[package]
name = "shim_maker"
version = "0.1.0"
edition = "2021"


[dependencies]
goblin = { version = "0.9.0", default-features = false, features = ["std", "alloc", "endian_fd", "pe64"] }
indoc = "2.0.4"
anyhow = {version = "1.0.79", optional = true}
clap = { version = "4.5.0", features = ["derive"], optional = true }

[features]
cli = ["clap", "anyhow"]

[[bin]]         
name = "main"
required-features = ["cli"]
